backend/seed2.txt
C:\Users\LENOVO\Desktop\pharmapp\backend\node_modules\ts-node\src\index.ts:859
    return new TSError(diagnosticText, diagnosticCodes, diagnostics);
           ^
TSError: G¿» Unable to compile TypeScript:
prisma/seed.ts(2,10): error TS2724: '"@prisma/adapter-better-sqlite3"' has no exported member named 'PrismaBetterSQLite3'. Did you mean 'PrismaBetterSqlite3'?
System.Management.Automation.RemoteException
    at createTSError (C:\Users\LENOVO\Desktop\pharmapp\backend\node_modules\ts-node\src\index.ts:859:12)
    at reportTSError (C:\Users\LENOVO\Desktop\pharmapp\backend\node_modules\ts-node\src\index.ts:863:19)
    at getOutput (C:\Users\LENOVO\Desktop\pharmapp\backend\node_modules\ts-node\src\index.ts:1077:36)
    at Object.compile (C:\Users\LENOVO\Desktop\pharmapp\backend\node_modules\ts-node\src\index.ts:1433:41)
    at Module.m._compile (C:\Users\LENOVO\Desktop\pharmapp\backend\node_modules\ts-node\src\index.ts:1617:30)
    at node:internal/modules/cjs/loader:1893:10
    at Object.require.extensions.<computed> [as .ts] (C:\Users\LENOVO\Desktop\pharmapp\backend\node_modules\ts-node\src\index.ts:1621:12)
    at Module.load (node:internal/modules/cjs/loader:1481:32)
    at Module._load (node:internal/modules/cjs/loader:1300:12)
    at TracingChannel.traceSync (node:diagnostics_channel:328:14) {
  diagnosticCodes: [ 2724 ]
}
